RESOLVED FIXED180766
Only use CookieStorageShim when we aren't using NetworkSession
https://bugs.webkit.org/show_bug.cgi?id=180766
Summary Only use CookieStorageShim when we aren't using NetworkSession
Alex Christensen
Reported 2017-12-13 13:07:55 PST
Only use CookieStorageShim when we aren't using NetworkSession
Attachments
Patch (2.37 KB, patch)
2017-12-13 13:09 PST, Alex Christensen
bfulgham: review+
Alex Christensen
Comment 1 2017-12-13 13:09:06 PST
Alexey Proskuryakov
Comment 2 2017-12-13 19:34:36 PST
Comment on attachment 329247 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=329247&action=review > Source/WebKit/ChangeLog:3 > + Only use CookieStorageShim when we aren't using NetworkSession Don’t we need it on 10.11 for media?
Alex Christensen
Comment 3 2017-12-14 11:35:06 PST
(In reply to Alexey Proskuryakov from comment #2) > Comment on attachment 329247 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=329247&action=review > > > Source/WebKit/ChangeLog:3 > > + Only use CookieStorageShim when we aren't using NetworkSession > > Don’t we need it on 10.11 for media? Yes we do. That's why I enclosed it in !USE(NETWORK_SESSION). Otherwise I would've just removed it.
Alexey Proskuryakov
Comment 4 2017-12-14 12:27:44 PST
I was unclear. What I meant to ask was, do we have platforms that use network session, but still use in-process media loading?
Alex Christensen
Comment 5 2017-12-21 10:28:30 PST
(In reply to Alexey Proskuryakov from comment #4) > I was unclear. What I meant to ask was, do we have platforms that use > network session, but still use in-process media loading? No
Brent Fulgham
Comment 6 2017-12-28 14:07:55 PST
Comment on attachment 329247 [details] Patch Looks reasonable. Keep an eye on legacy bots after landing, please.
Alex Christensen
Comment 7 2018-01-02 09:18:28 PST
Radar WebKit Bug Importer
Comment 8 2018-01-02 12:59:40 PST
Note You need to log in before you can comment on or make changes to this bug.