Only use CookieStorageShim when we aren't using NetworkSession https://bugs.webkit.org/show_bug.cgi?id=180766

Reviewed by Brent Fulgham.

* Shared/mac/CookieStorageShim.h:
* Shared/mac/CookieStorageShim.mm:
* WebProcess/WebProcess.cpp:
(WebKit::WebProcess::initializeWebProcess):



Canonical link: https://commits.webkit.org/197048@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@226324 268f45cc-cd09-0410-ab3c-d52691b4dbfc